UnitedSolar/force-app/main/default/objects/Order/fields/Bill_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Bill_Remaining__c</fullName>
    <formula>TotalAmount -  Summary_of_Receipts__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>