UnitedSolar/force-app/main/default/objects/Order/fields/Next_Payment__c.field-meta.xml
<CustomField>
    <fullName>Next_Payment__c</fullName>
    <label>Next_Payment</label>
    <type>Date</type>
</CustomField>