UnitedSolar/force-app/main/default/objects/Order/fields/Summary_of_Receipts__c.field-meta.xml
<CustomField>
    <fullName>Summary_of_Receipts__c</fullName>
    <label>Summary of Receipts</label>
    <summarizedField>Receipt__c.Amount_Paid__c</summarizedField>
    <summaryFilterItems>
        <field>Receipt__c.Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </summaryFilterItems>
    <summaryForeignKey>Receipt__c.Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>