UnitedSolar/force-app/main/default/objects/Order/validationRules/Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Future</fullName>
    <active>true</active>
    <errorConditionFormula>Next_Payment__c  &gt;     DATEVALUE( NOW() )</errorConditionFormula>
    <errorDisplayField>Next_Payment__c</errorDisplayField>
    <errorMessage>Payments must be set in the future to be valid</errorMessage>
</ValidationRule>